--- a/va-virkailija/web/va/style/budgetedit.less
+++ b/va-virkailija/web/va/style/budgetedit.less
@@ -89,6 +89,11 @@
       .amount-value-column .money:after {
         margin-left: 0;
       }
+      .amounts, .percentages {
+        tbody tr:first-child td {
+          height: auto;
+        }
+      }
     }
   }
 }
